Hotels-Web-App/Hotels-Backend/gatewayservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayservice
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      containers:
      - name: gatewayservice
        image: rsoi-2022-lab5-authorization-sergueibaskakov-gatewayservice:latest  # Your local image reference
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
