Hotels-Web-App/Hotels-Backend/paymentservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: paymentservice
        image: rsoi-2022-lab5-authorization-sergueibaskakov-paymentservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8060
