Hotels-Web-App/Hotels-Backend/gatewayservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
spec:
  selector:
    app: gatewayservice
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001  # NodePort for external access
  type: NodePort
