Hotels-Web-App/Hotels-Backend/loyaltyservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loyaltyservice
spec:
  ports:
  - port: 8050
    targetPort: 8050
  selector:
    app: loyaltyservice
  type: ClusterIP
