Hotels-Web-App/Hotels-Backend/paymentservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  ports:
  - port: 8060
    targetPort: 8060
  selector:
    app: paymentservice
  type: ClusterIP
