Hotels-Web-App/Hotels-Backend/pgadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pgadmin
  type: NodePort
