Hotels-Web-App/Hotels-Backend/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
  type: ClusterIP
