Hotels-Web-App/Hotels-Backend/reservationservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reservationservice
spec:
  ports:
  - port: 8070
    targetPort: 8070
  selector:
    app: reservationservice
  type: ClusterIP
