Hotels-Web-App/Hotels-Backend/statisticsservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: statisticsservice
spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app: statisticsservice
  type: ClusterIP
