Hotels-Web-App/Hotels-Backend/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewayservice
            port:
              number: 8080
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: pgadmin  # Make sure to replace with the actual name of your pgAdmin service
            port:
              number: 80
