Hotels-Web-App/Hotels-Backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: localhost  # Set this to your domain or use localhost for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewayservice
            port:
              number: 8080
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: pgadmin  # Make sure to replace with the actual name of your pgAdmin service
            port:
              number: 80
